--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "esawyer-finalproject",
-  "homepage": "https://erinsa.github.io/esawyer-finalproject/",
+  "homepage": "https://erinsa.github.io/esawyer-finalproject",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
